--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         *{margin:0;padding:0;box-sizing:border-box;font-family:'Courier New',monospace}
-        :root{--primary-orange:#c27c15;--dark-bg:#0a0a0a;--light-text:#f0f0f0;--gray-text:#888;--accent-orange:#e69500}
+        :root{--primary-orange:#AE37CF;--dark-bg:#0a0a0a;--light-text:#f0f0f0;--gray-text:#888;--accent-orange:#8E02E5}
         body{background-color:var(--dark-bg);color:var(--light-text);overflow-x:hidden;line-height:1.6}
         #matrix-bg{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;opacity:.3}
         .container{max-width:1200px;margin:0 auto;padding:20px;transform:translateY(0);transition:transform .5s ease-in-out}
