--- a/index.html
+++ b/index.html
@@ -87,14 +87,6 @@ h2::after {
         .game-frame{flex:1;width:100%;border:1px solid var(--primary-orange);border-radius:5px;background-color:rgba(30,30,30,.7)}
         .game-placeholder{flex:1;width:100%;background-color:rgba(30,30,30,.7);border:1px solid var(--primary-orange);border-radius:5px;display:flex;flex-direction:column;justify-content:center;align-items:center}
         .game-placeholder i{font-size:4rem;color:var(--primary-orange);margin-bottom:20px;text-shadow:0 0 10px rgba(194,124,21,.7)}
-        .social-icons {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            display: flex;
-            gap: 15px;
-            z-index: 10;
-        }
 
         .search-container {
     max-width: 600px;
@@ -152,17 +144,9 @@ h2::after {
     font-size: 0.9rem;
 }
         
-        .social-icons a {
-            color: var(--primary-orange);
-            font-size: 1.5rem;
-            transition: all 0.3s ease;
-        }
+        
 
-        .social-icons a:hover {
-            color: var(--accent-orange);
-            transform: translateY(-2px);
-            text-shadow: 0 0 10px rgba(230, 149, 0, 0.7);
-        }
+
 
         .comments-section {
             max-width: 1200px;
@@ -503,9 +487,6 @@ h2::after {
             .logo{height:80px}
             .terminal-prompt{padding:10px}
             .game-controls{flex-direction:column;gap:10px}
-            .social-icons {top: 10px; right: 10px;}
-            .comments-section {margin: 20px auto;}
-            .padlet-embed {height: 400px;}
         }
 </style>
 </head>
@@ -513,24 +494,16 @@ h2::after {
         <canvas id="matrix-bg"></canvas>
         <div class="container" id="main-container">
             <header>
-                <div class="social-icons">
-                    <a href="https://github.com/NoahsAmazingTutoringHelp" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.tiktok.com/@noahstutoringhub" target="_blank"><i class="fab fa-tiktok"></i></a>
-                </div>
                 <div class="logo-container">
                     <img src="images/logo.png" alt="Noah's Tutoring Hub" class="logo">
                 </div>
-                <div class="theme-toggle-container">
-    <button id="themeToggle" class="theme-toggle-btn" title="Cycle Themes">
-        <i class="fas fa-palette"></i>
-    </button>
 </div>
 <p class="tagline">ACCESSING TUTORING HUB...</p>
                 <div class="terminal-prompt">
                     <p class="prompt-line">> SYSTEM BOOTING...</p>
-                    <p class="prompt-line">> WELCOME TO NOAH'S TUTORING HUB.</p>
+                    <p class="prompt-line">> WELCOME TO REALLY UNBL0CKED V2 BY LUKAS.</p>
                     <p class="prompt-line">> CONNECTING... <span class="glow" style="color: var(--primary-orange);">SUCCESS</span></p>
-                    <p class="prompt-line">> LESSONS LOADING...</p>
+                    <p class="prompt-line">> GAMES LOADING...</p>
                     <p class="prompt-line typing">> BOREDOM BEING SOLVED...</p>
                 </div>
             </header>
