--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas | College Courses</title>
+    <title>Really Math | By LM</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -491,20 +491,25 @@ h2::after {
 </style>
 </head>
 <body>
+
         <canvas id="matrix-bg"></canvas>
         <div class="container" id="main-container">
             <header>
+                <div class="social-icons">
+                    <a href="really-unblocked3.vercel.app" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="really-unblocked3.vercel.app" target="_blank"><i class="fab fa-tiktok"></i></a>
+                </div>
                 <div class="logo-container">
                     <img src="images/logo.png" alt="Noah's Tutoring Hub" class="logo">
-                </div>
-</div>
+                    </div>
+        </div>
 <p class="tagline">ACCESSING TUTORING HUB...</p>
                 <div class="terminal-prompt">
                     <p class="prompt-line">> SYSTEM BOOTING...</p>
                     <p class="prompt-line">> WELCOME TO REALLY UNBL0CKED V2 BY LUKAS.</p>
                     <p class="prompt-line">> CONNECTING... <span class="glow" style="color: var(--primary-orange);">SUCCESS</span></p>
                     <p class="prompt-line">> GAMES LOADING...</p>
-                    <p class="prompt-line typing">> BOREDOM BEING SOLVED...</p>
+                    <p class="prompt-line typing">> PAXTAN POOKIE...</p>
                 </div>
             </header>
             <section id="popular">
