--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ h2::after {
     margin-right: 0;
 }
         .lessons-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:25px;margin-top:20px}
-        .lesson-card{background:linear-gradient(145deg,#151515,#0a0a0a);border:1px solid var(--primary-orange);border-radius:8px;padding:15px;transition:all .3s ease;position:relative;overflow:hidden;cursor:pointer}
+        .lesson-card{background:linear-gradient(145deg,#8E02E5,#8E02E5);border:1px solid var(--primary-orange);border-radius:8px;padding:15px;transition:all .3s ease;position:relative;overflow:hidden;cursor:pointer}
         .lesson-card:hover{transform:translateY(-5px);box-shadow:0 8px 20px rgba(194,124,21,.4);border-color:var(--accent-orange)}
         .lesson-image{width:100%;height:160px;object-fit:cover;border-radius:5px;margin-bottom:12px;border:1px solid rgba(194,124,21,.3)}
         .lesson-title{font-size:1.3rem;color:var(--light-text);margin-bottom:8px}
@@ -275,11 +275,11 @@ h2::after {
 
         /* Rainbow Theme */
         .theme-rainbow {
-            --primary-orange: #ff0080;
+            --primary-orange: #8E02E5;
             --dark-bg: #0a0a0a;
             --light-text: #f0f0f0;
             --gray-text: #aaa;
-            --accent-orange: #ff00ff;
+            --accent-orange: #8E02E5;
         }
 
         .theme-rainbow .logo {
@@ -315,11 +315,11 @@ h2::after {
 
         /* Cyber Green Theme */
         .theme-cyber-green {
-            --primary-orange: #00ff00;
+            --primary-orange: #8E02E5;
             --dark-bg: #000;
             --light-text: #00ff00;
             --gray-text: #008800;
-            --accent-orange: #00cc00;
+            --accent-orange: #8E02E5;
         }
 
         .theme-cyber-green .logo {
@@ -395,11 +395,11 @@ h2::after {
 
         /* Solarized Theme */
         .theme-solarized {
-            --primary-orange: #2aa198;
+            --primary-orange: #8E02E5;
             --dark-bg: #002b36;
             --light-text: #839496;
             --gray-text: #586e75;
-            --accent-orange: #268bd2;
+            --accent-orange: #8E02E5;
         }
 
         .theme-solarized .logo {
@@ -475,11 +475,11 @@ h2::after {
 
         /* Amber Theme (Default) */
         .theme-amber {
-            --primary-orange: #c27c15;
+            --primary-orange: #8E02E5;
             --dark-bg: #0a0a0a;
             --light-text: #f0f0f0;
             --gray-text: #888;
-            --accent-orange: #e69500;
+            --accent-orange: #6703A6;
         }
         
         @media (max-width:768px){
